# cw-mcp

./: .dockerignore  .env.azure.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  compose.example.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deployment_help.yml  security_report.yml
.github/workflows/: ci.yml  deploy.yml  ghcr-cleanup.yml  release.yml  security.yml
docs/: AZURE_CONTAINER_APPS.md  DOCKER_COMPOSE.md  README.md  ticket-classification-workflow-example.txt
scripts/: render-release-notes.py  runtime-smoke.sh
src/connectwise_manage_mcp/: app.py  config.py  models.py  preflight.py  server.py
src/connectwise_manage_mcp/connectwise/: __init__.py  client.py
src/connectwise_manage_mcp/tools/: companies.py  contacts.py  lookups.py  tickets.py
tests/: test_config.py  test_connectwise_client.py  test_imports.py  test_optional_raw_responses.py  test_preflight.py  test_server_auth.py  test_ticket_tool_validation.py
