[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectwise-manage-mcp"
version = "0.6.0"
description = "FastMCP wrapper for ConnectWise Manage"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
keywords = ["connectwise", "mcp", "fastmcp", "automation", "tickets"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Office/Business",
  "Typing :: Typed",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/RenierM26/cw-mcp"
Repository = "https://github.com/RenierM26/cw-mcp"
Issues = "https://github.com/RenierM26/cw-mcp/issues"
Documentation = "https://github.com/RenierM26/cw-mcp/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
cwmcp-http = "connectwise_manage_mcp.server:run_http"
cwmcp-stdio = "connectwise_manage_mcp.server:run_stdio"
cwmcp-preflight = "connectwise_manage_mcp.preflight:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
